Many changes
- World preset to datagen, cleans up some stuff in rock settings/rock layer settings only needed for presets
- Lots of added block tags to datagen
- Rework `DataAccessor` in datagen to be just `CompletableFuture<?>` based, and setup `DataManagerProvider` to bind entries to the relevant manager
- Re-add patchouli based on snapshot version, and port compat. Mostly broken due to recipe renames
- Implementation work on molds, heat components, fluid components, bug fixing and prototyping. Molds now function on a basic level
- Re-add tests, using JUnit in proper context. Add tests for new fluid handler, mold behavior.
- Migrate several tag based tooltips to using `ItemLore`